--- a/task5/index.html
+++ b/task5/index.html
@@ -7,34 +7,34 @@
 		<form name="registration">
 			First Name:
 			<br>
-			<input type="text" name="firstname">
-			<p id="f_nameVal"></p>
+			<input type="text" onblur="nameCheck('firstname')" name="firstname">
+			<br>
 			Last Name:
 			<br>
-			<input type="text" name="lastname">
-			<p id="l_nameVal"></p>
+			<input type="text" onblur="nameCheck('lastname')" name="lastname">
+			<br>
 			EGN:
 			<br>
-			<input type="text" name="egn">
-			<p id="egnVal"></p>
+			<input type="text" onblur="egnCheck()" name="egn">
+			<br>
 			Age:
 			<br>
-			<input type="text" name="age">
-			<p id="ageVal"></p>
+			<input type="text" onblur="ageCheck()" name="age">
+			<br>
 			Address:
 			<br>
-			<input type="text" name="address">
-			<p id="addressVal"></p>
+			<input type="text" onblur="addressCheck()" name="address">
+			<br>
 			Password:
 			<br>
-			<input type="password" name="pass">
-			<p id="passVal"></p>
+			<input type="password" onblur="passwordCheck()" name="pass">
+			<br>
 			Confirm Password:
 			<br>
-			<input type="password" name="c_pass">
-			<p id="c_passVal"></p>
+			<input type="password" onblur="confirmPasswordCheck()" name="c_pass">
+			<br>
 		</form>
-		<button type="button" onclick="validation()">Register</button>
+		<textarea name="validation" id="val" rows="7" cols="44" readonly></textarea>
 		<script src="validator.js"></script>
 	</body>	
 </html>
