Removed unnessesary code.

--- a/task5/index.html
+++ b/task5/index.html
@@ -27,11 +27,11 @@
 			<br>
 			Password:
 			<br>
-			<input type="password" onblur="passwordCheck()" name="pass">
+			<input type="password" onblur="passCheck()" name="pass">
 			<br>
 			Confirm Password:
 			<br>
-			<input type="password" onblur="confirmPasswordCheck()" name="c_pass">
+			<input type="password" name="c_pass">
 			<br>
 		</form>
 		<textarea name="validation" id="val" rows="7" cols="44" readonly></textarea>
