Renamed methods in index.html

--- a/task5/index.html
+++ b/task5/index.html
@@ -7,27 +7,27 @@
 		<form name="registration">
 			First Name:
 			<br>
-			<input type="text" onblur="nameCheck('firstname')" name="firstname">
+			<input type="text" onblur="validateName('firstname')" name="firstname">
 			<br>
 			Last Name:
 			<br>
-			<input type="text" onblur="nameCheck('lastname')" name="lastname">
+			<input type="text" onblur="validateName('lastname')" name="lastname">
 			<br>
 			EGN:
 			<br>
-			<input type="text" onblur="egnCheck()" name="egn">
+			<input type="text" onblur="validateEgn()" name="egn">
 			<br>
 			Age:
 			<br>
-			<input type="text" onblur="ageCheck()" name="age">
+			<input type="text" onblur="validateAge()" name="age">
 			<br>
 			Address:
 			<br>
-			<input type="text" onblur="addressCheck()" name="address">
+			<input type="text" onblur="validateAddress()" name="address">
 			<br>
 			Password:
 			<br>
-			<input type="password" onblur="passCheck()" name="pass">
+			<input type="password" onblur="validatePass()" name="pass">
 			<br>
 			Confirm Password:
 			<br>
