change name of method to isFraction

--- a/validator/validator.html
+++ b/validator/validator.html
@@ -7,6 +7,6 @@
 	<input id="input" type="text">
 	<span id="output"></span>
 	<br>
-	<button id="submit" onclick="validateNum(input.value, output)" type="button">Submit</button>
+	<button id="submit" onclick="isFraction(input.value, output)" type="button">Submit</button>
 </body>
 </html>
